# ost

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/agents/: audio-pipeline-dev.md  ba-analyst.md  brainstormer.md  code-reviewer.md  debugger.md  devops.md  frontend-ui-dev.md  history-tracker.md  llm-integration-dev.md  merge-manager.md  orchestrator.md  qa-test.md  screen-translate-dev.md  security-reviewer.md  spec-guardian.md  tech-researcher.md
.claude/commands/: brainstorm.md  implement-fr.md  new-adr.md  new-spec-section.md  new-task.md  review-pr.md  secret-scan.md  sync-context.md  task-resume.md  test.md
.claude/hooks/: README.md  agent-history.ps1  check-commit-msg.ps1  guard-main-commit.ps1  protect-adr.ps1  protect-secrets.ps1  specs-reminder.ps1
.claude/rules/: 00-overview.md  agent-guardrails.md  coding-standards.md  conventional-commits.md  design-system.md  docs-workflow.md  frontend.md  git-workflow.md  human-in-the-loop.md  security-privacy.md  task-tracking.md  tech-stack.md  testing.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: system-overview.md
docs/context/: business-rules.md  domain-glossary.md  known-issues.md  tool-changelog.md
docs/requirements/: PRD-FR-01-stt-backend-options.md  PRD-FR-02-region-translate.md  README.md
docs/specs/: 01-overview.md  02-stakeholders.md  03-glossary.md  04-business-flows.md  05-functional-requirements.md  06-access-control.md  07-non-functional-requirements.md  08-data-model.md  09-integration-interface.md  10-ui-ux-wireframes.md  11-assumptions-constraints.md  12-technical-feasibility.md  13-revision-history.md  README.md
docs/tasks/: README.md  master-plan.md
docs/templates/: ADR.md.template  PRD.md.template  TASK.md.template
e2e/: README.md  tsconfig.json  wdio.conf.ts
e2e/specs/: overlay-lifecycle.spec.ts  region-select.spec.ts  settings-keys.spec.ts  smoke.spec.ts  window-open-deferred.spec.ts
e2e/support/: nav.ts
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: audio_caption.rs  ocr_stage.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: idle_probe.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: chunk.rs  mod.rs  session.rs  source.rs  vad.rs  wasapi.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: keys.rs  mod.rs  providers.rs
src-tauri/src/core/: mod.rs  resource.rs  session.rs
src-tauri/src/keys/: api_key.rs  backend.rs  error.rs  mod.rs  store.rs
src-tauri/src/llm/: download.rs  mod.rs  model.rs  process.rs  server.rs
src-tauri/src/models/: consent.rs  descriptor.rs  download.rs  mod.rs  store.rs  verify.rs
src-tauri/src/ocr/: engine.rs  fixtures.rs  mod.rs  paddle.rs
src-tauri/src/providers/: anthropic.rs  config.rs  error.rs  factory.rs  gemini.rs  local_models.rs  local_openai.rs  mod.rs  openai.rs  openrouter.rs  prompt.rs  redact.rs  traits.rs  types.rs
src-tauri/src/shell/: audio_session.rs  caption.rs  history.rs  hotkeys.rs  main_window.rs  mod.rs  region.rs  settings.rs  tray.rs  windows.rs
src-tauri/src/stt/: catalog.rs  download.rs  engine.rs  hardware.rs  mod.rs  model.rs  switch.rs  whisper.rs
src-tauri/tests/: ocr_spike.rs  ocr_spike_r2.rs
src/components/: ConsentDialog.css  ConsentDialog.tsx  ProviderKeyNotice.css  ProviderKeyNotice.test.tsx  ProviderKeyNotice.tsx
src/hooks/: useAudioSession.test.ts  useAudioSession.ts  useCaptionOverlay.test.ts  useCaptionOverlay.ts  useHasAnyProviderKey.test.ts  useHasAnyProviderKey.ts  useHistory.test.ts  useHistory.ts  useHistorySettings.test.ts  useHistorySettings.ts  useHotkeys.test.ts  useHotkeys.ts  useLlmModels.test.ts  useLlmModels.ts  useLlmServer.test.ts  useLlmServer.ts  useLocalProviderConnection.test.ts  useLocalProviderConnection.ts  useModelConsent.test.ts  useModelConsent.ts  useProviderKeys.test.ts  useProviderKeys.ts  useProviderPickerMetadata.test.ts  useProviderPickerMetadata.ts  (+10 more)
(+147 files in other folders)
