[package]
name = "ost"
version = "0.1.0"
description = "OST - On-Screen Translator"
authors = ["nguyenhx2"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --- TASK-006 provider layer (FR-03) ---
async-trait = "0.1.88"
keyring = { version = "3.6.2", features = ["windows-native"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
url = "2.5.8"

# --- TASK-008 region-select overlay (FR-02, FR-04) ---
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"

# --- TASK-009 settings persistence (FR-03/FR-04): names only, never keys ---
tauri-plugin-store = "2.2.0"

[dev-dependencies]
# --- TASK-006 provider layer (FR-03) ---
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
wiremock = "0.6.3"

